--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,9 @@ author:
       # url: "mailto:your.name@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://joshvejendla.github.io"
+      # url: "https://joshvejendla.github.io"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      # icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
