--- a/_config.yml
+++ b/_config.yml
@@ -117,8 +117,8 @@ author:
       icon: "fas fa-fw fa-link"
       # url: "https://joshvejendla.github.io"
     - label: "Twitter"
-      # icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/prabhathvejendla/"
